clean up and add slight improvements
- error events now bubble
- tryRender() rendering is now an async critical zone
- draw() can now handle elements for HTML, too

--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "license": "MPL 2.0",
   "repository": "https://github.com/NSSTC/slim-fit.git",
   "main": "src/slim-fit.ts",
-  "keywords": ["webcomponent", "component", "shadowdom", "html"]
+  "keywords": [
+    "webcomponent",
+    "component",
+    "shadowdom",
+    "html"
+  ]
 }
